[FIX] Smaller Font on small devices
vaibito Modal

--- a/scss/vaibito/_vaibito_form.scss
+++ b/scss/vaibito/_vaibito_form.scss
@@ -22,3 +22,15 @@
         margin-right: 5px;
     }
 }
+
+#vaibito-modal {
+    table {
+        @include media-breakpoint-down(md) {
+            font-size: 16px;
+        }
+
+        @include media-breakpoint-down(sm) {
+            font-size: 14px;
+        }
+    }
+}
